--- a/html/index.html
+++ b/html/index.html
@@ -48,32 +48,32 @@
         <div class="sidenav">
           <a
             class="textmenu"
-            href="gallery1.html"
+            href="./gallery1.html"
             >Nature</a
           >
           <a
             class="textmenu"
-            href="gallery2.html"
+            href="./gallery2.html"
             >Medieval</a
           >
           <a
             class="textmenu"
-            href="gallery3.html"
+            href="./gallery3.html"
             >Wedding</a
           >
           <a
             class="textmenu"
-            href="gallery4.html"
+            href="./gallery4.html"
             >Portraits</a
           >
           <a
             class="textmenu"
-            href="gallery5.html"
+            href="./gallery5.html"
             >Events</a
           >
           <a
             class="textmenu"
-            href="gallery6.html"
+            href="./gallery6.html"
             >Shows</a
           >
           <a class="textmenu" href="#">Concerts</a>
@@ -83,31 +83,28 @@
       <div class="horizontal-slider">
         <div class="slider-container">
           <div class="item">
-            <img src="01.jpg" class="slider-image" />
+            <img src="../images/slider/01.jpg" class="slider-image" />
           </div>
           <div class="item">
-            <img src="02.jpg" class="slider-image" />
+            <img src="../images/slider/02.jpg" class="slider-image" />
           </div>
           <div class="item">
-            <img src="03.jpg" class="slider-image" />
+            <img src="../images/slider/03.jpg" class="slider-image" />
           </div>
           <div class="item">
-            <img src="04.jpg" class="slider-image" />
+            <img src="../images/slider/04.jpg" class="slider-image" />
           </div>
           <div class="item">
-            <img src="05.jpg" class="slider-image" />
+            <img src="../images/slider/05.jpg" class="slider-image" />
           </div>
           <div class="item">
-            <img src="06.jpg" class="slider-image" />
+            <img src="../images/slider/06.jpg" class="slider-image" />
           </div>
           <div class="item">
-            <img src="07.jpg" class="slider-image" />
+            <img src="../images/slider/07.jpg" class="slider-image" />
           </div>
           <div class="item">
-            <img src="08.jpg" class="slider-image" />
-          </div>
-          <div class="item">
-            <img src="09.jpg" class="slider-image" />
+            <img src="../images/slider/08.jpg" class="slider-image" />
           </div>
         </div>
       </div>
