--- a/html/gallery2.html
+++ b/html/gallery2.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet"> 
-    <link href="gallery.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="../css/gallery.css" media="all" rel="stylesheet" type="text/css" />
   </head>
   <body>
 <div class="fond">
@@ -27,53 +27,53 @@
     </div>
 </div>
 
-    <div class="navbar-2">
-      <div class="sidenav">
-        <a class="textmenu" href="file:///Users/julie/Code/0-WebSitePhoto/gallery1.html">Nature</a>
-        <a class="textmenu"  href="file:///Users/julie/Code/0-WebSitePhoto/gallery2.html">Medieval</a>
-       <a  class="textmenu"  href="file:///Users/julie/Code/0-WebSitePhoto/gallery3.html">Wedding</a>
-       <a class="textmenu"  href="file:///Users/julie/Code/0-WebSitePhoto/gallery4.html">Portraits</a>
-       <a  class="textmenu" href="file:///Users/julie/Code/0-WebSitePhoto/gallery5.html">Events</a>
-       <a class="textmenu"  href="file:///Users/julie/Code/0-WebSitePhoto/gallery6.html">Shows</a>
-        <a class="textmenu"  href="file:///Users/julie/Code/0-WebSitePhoto/gallery7.html">Concerts</a>
-        <a class="textmenu"  href="file:///Users/julie/Code/0-WebSitePhoto/gallery8.html">Personal</a>
-      </div>
+<div class="navbar-2">
+  <div class="sidenav">
+    <a class="textmenu" href="./gallery1.html">Nature</a>
+    <a class="textmenu"  href="./gallery2.html">Medieval</a>
+   <a  class="textmenu"  href="./gallery3.html">Wedding</a>
+   <a class="textmenu"  href="./gallery4.html">Portraits</a>
+   <a  class="textmenu" href="./gallery5.html">Events</a>
+   <a class="textmenu"  href="./gallery6.html">Shows</a>
+    <a class="textmenu"  href="./gallery7.html">Concerts</a>
+    <a class="textmenu"  href="./gallery8.html">Personal</a>
+  </div>
     
     <div id="gallery">
       <div class="row">
         <div class="column">
-          <img src="gallery2/001.jpg">
-          <img src="gallery2/002.jpg">
-          <img src="gallery2/003.jpg">
-          <img src="gallery2/004.jpg">
-          <img src="gallery2/005.jpg">
-          <img src="gallery2/006.jpg">
-          <img src="gallery2/007.jpg">
+          <img src="../images/gallery2/01.jpg">
+          <img src="../images/gallery2/02.jpg">
+          <img src="../images/gallery2/03.jpg">
+          <img src="../images/gallery2/04.jpg">
+          <img src="../images/gallery2/05.jpg">
+          <img src="../images/gallery2/06.jpg">
+          <img src="../images/gallery2/07.jpg">
         </div>
         <div class="column">
-          <img src="gallery2/008.jpg">
-          <img src="gallery2/009.jpg">
-          <img src="gallery2/0010.jpg">
-          <img src="gallery2/0011.jpg">
-          <img src="gallery2/0012.jpg">
-          <img src="gallery2/001.jpg">
+          <img src="../images/gallery2/08.jpg">
+          <img src="../images/gallery2/09.jpg">
+          <img src="../images/gallery2/10.jpg">
+          <img src="../images/gallery2/11.jpg">
+          <img src="../images/gallery2/12.jpg">
+          <img src="../images/gallery2/01.jpg">
         </div>
         <div class="column">
-          <img src="gallery2/002.jpg">
-          <img src="gallery2/003.jpg">
-          <img src="gallery2/004.jpg">
-          <img src="gallery2/005.jpg">
-          <img src="gallery2/006.jpg">
-          <img src="gallery2/007.jpg">
-          <img src="gallery2/008.jpg">
+          <img src="../images/gallery2/02.jpg">
+          <img src="../images/gallery2/03.jpg">
+          <img src="../images/gallery2/04.jpg">
+          <img src="../images/gallery2/05.jpg">
+          <img src="../images/gallery2/06.jpg">
+          <img src="../images/gallery2/07.jpg">
+          <img src="../images/gallery2/08.jpg">
         </div>
         <div class="column">
-          <img src="gallery2/009.jpg">
-          <img src="gallery2/0010.jpg">
-          <img src="gallery2/0011.jpg">
-          <img src="gallery2/0012.jpg">
-          <img src="gallery2/001.jpg">
-          <img src="gallery2/002.jpg">
+          <img src="../images/gallery2/09.jpg">
+          <img src="../images/gallery2/10.jpg">
+          <img src="../images/gallery2/11.jpg">
+          <img src="../images/gallery2/12.jpg">
+          <img src="../images/gallery2/01.jpg">
+          <img src="../images/gallery2/02.jpg">
         </div>
       </div>
     </div>
