--- a/html/gallery5.html
+++ b/html/gallery5.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
-    <link href="gallery.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="../css/gallery.css" media="all" rel="stylesheet" type="text/css" />
   </head>
   <body>
 <div class="fond">
@@ -27,17 +27,17 @@
     </div>
 </div>
 
-    <div class="navbar-2">
-      <div class="sidenav">
-        <a class="textmenu" href="file:///Users/julie/Code/0-WebSitePhoto/gallery1.html">Nature</a>
-        <a class="textmenu"  href="file:///Users/julie/Code/0-WebSitePhoto/gallery2.html">Medieval</a>
-       <a  class="textmenu"  href="file:///Users/julie/Code/0-WebSitePhoto/gallery3.html">Wedding</a>
-       <a class="textmenu"  href="file:///Users/julie/Code/0-WebSitePhoto/gallery4.html">Portraits</a>
-       <a  class="textmenu" href="file:///Users/julie/Code/0-WebSitePhoto/gallery5.html">Events</a>
-       <a class="textmenu"  href="file:///Users/julie/Code/0-WebSitePhoto/gallery6.html">Shows</a>
-        <a class="textmenu"  href="file:///Users/julie/Code/0-WebSitePhoto/gallery7.html">Concerts</a>
-        <a class="textmenu"  href="file:///Users/julie/Code/0-WebSitePhoto/gallery8.html">Personal</a>
-      </div>
+<div class="navbar-2">
+  <div class="sidenav">
+    <a class="textmenu" href="./gallery1.html">Nature</a>
+    <a class="textmenu"  href="./gallery2.html">Medieval</a>
+   <a  class="textmenu"  href="./gallery3.html">Wedding</a>
+   <a class="textmenu"  href="./gallery4.html">Portraits</a>
+   <a  class="textmenu" href="./gallery5.html">Events</a>
+   <a class="textmenu"  href="./gallery6.html">Shows</a>
+    <a class="textmenu"  href="./gallery7.html">Concerts</a>
+    <a class="textmenu"  href="./gallery8.html">Personal</a>
+  </div>
 
     <div id="gallery">
       <div class="row">
