--- a/html/gallery4.html
+++ b/html/gallery4.html
@@ -42,38 +42,38 @@
     <div id="gallery">
       <div class="row">
         <div class="column">
-          <img src="gallery4/001.jpg">
-          <img src="gallery4/002.jpg">
-          <img src="gallery4/003.jpg">
-          <img src="gallery4/004.jpg">
-          <img src="gallery4/005.jpg">
-          <img src="gallery4/006.jpg">
-          <img src="gallery4/007.jpg">
+          <img src="../images/gallery4/01.jpg">
+          <img src="../images/gallery4/02.jpg">
+          <img src="../images/gallery4/03.jpg">
+          <img src="../images/gallery4/04.jpg">
+          <img src="../images/gallery4/05.jpg">
+          <img src="../images/gallery4/06.jpg">
+          <img src="../images/gallery4/07.jpg">
         </div>
         <div class="column">
-          <img src="gallery4/008.jpg">
-          <img src="gallery4/009.jpg">
-          <img src="gallery4/001.jpg">
-          <img src="gallery4/002.jpg">
-          <img src="gallery4/003.jpg">
-          <img src="gallery4/004.jpg">
+          <img src="../images/gallery4/08.jpg">
+          <img src="../images/gallery4/09.jpg">
+          <img src="../images/gallery4/01.jpg">
+          <img src="../images/gallery4/02.jpg">
+          <img src="../images/gallery4/03.jpg">
+          <img src="../images/gallery4/04.jpg">
         </div>
         <div class="column">
-          <img src="gallery4/005.jpg">
-          <img src="gallery4/006.jpg">
-          <img src="gallery4/007.jpg">
-          <img src="gallery4/008.jpg">
-          <img src="gallery4/009.jpg">
-          <img src="gallery4/001.jpg">
-          <img src="gallery4/002.jpg">
+          <img src="../images/gallery4/05.jpg">
+          <img src="../images/gallery4/06.jpg">
+          <img src="../images/gallery4/07.jpg">
+          <img src="../images/gallery4/08.jpg">
+          <img src="../images/gallery4/09.jpg">
+          <img src="../images/gallery4/01.jpg">
+          <img src="../images/gallery4/02.jpg">
         </div>
         <div class="column">
-          <img src="gallery4/003.jpg">
-          <img src="gallery4/004.jpg">
-          <img src="gallery4/005.jpg">
-          <img src="gallery4/006.jpg">
-          <img src="gallery4/007.jpg">
-          <img src="gallery4/008.jpg">
+          <img src="../images/gallery4/03.jpg">
+          <img src="../images/gallery4/04.jpg">
+          <img src="../images/gallery4/05.jpg">
+          <img src="../images/gallery4/06.jpg">
+          <img src="../images/gallery4/07.jpg">
+          <img src="../images/gallery4/08.jpg">
         </div>
       </div>
     </div>
