--- a/html/gallery5.html
+++ b/html/gallery5.html
@@ -42,38 +42,38 @@
     <div id="gallery">
       <div class="row">
         <div class="column">
-          <img src="gallery5/16.jpg">
-          <img src="gallery5/001.jpg">
-          <img src="gallery5/002.jpg">
-          <img src="gallery5/003.jpg">
-          <img src="gallery5/004.jpg">
-          <img src="gallery5/005.jpg">
-          <img src="gallery5/006.jpg">
+          <img src="../images/gallery5/16.jpg">
+          <img src="../images/gallery5/01.jpg">
+          <img src="../images/gallery5/02.jpg">
+          <img src="../images/gallery5/03.jpg">
+          <img src="../images/gallery5/04.jpg">
+          <img src="../images/gallery5/05.jpg">
+          <img src="../images/gallery5/06.jpg">
         </div>
         <div class="column">
-          <img src="gallery5/007.jpg">
-          <img src="gallery5/008.jpg">
-          <img src="gallery5/009.jpg">
-          <img src="gallery5/0010.jpg">
-          <img src="gallery5/0011.jpg">
-          <img src="gallery5/0012.jpg">
+          <img src="../images/gallery5/07.jpg">
+          <img src="../images/gallery5/08.jpg">
+          <img src="../images/gallery5/09.jpg">
+          <img src="../images/gallery5/10.jpg">
+          <img src="../images/gallery5/11.jpg">
+          <img src="../images/gallery5/12.jpg">
         </div>
         <div class="column">
-          <img src="gallery5/0013.jpg">
-          <img src="gallery5/0014.jpg">
-          <img src="gallery5/16.jpg">
-          <img src="gallery5/001.jpg">
-          <img src="gallery5/002.jpg">
-          <img src="gallery5/003.jpg">
-          <img src="gallery5/004.jpg">
+          <img src="../images/gallery5/13.jpg">
+          <img src="../images/gallery5/14.jpg">
+          <img src="../images/gallery5/6.jpg">
+          <img src="../images/gallery5/01.jpg">
+          <img src="../images/gallery5/02.jpg">
+          <img src="../images/gallery5/03.jpg">
+          <img src="../images/gallery5/04.jpg">
         </div>
         <div class="column">
-          <img src="gallery5/005.jpg">
-          <img src="gallery5/006.jpg">
-          <img src="gallery5/007.jpg">
-          <img src="gallery5/008.jpg">
-          <img src="gallery5/009.jpg">
-          <img src="gallery5/0010.jpg">
+          <img src="../images/gallery5/05.jpg">
+          <img src="../images/gallery5/06.jpg">
+          <img src="../images/gallery5/07.jpg">
+          <img src="../images/gallery5/08.jpg">
+          <img src="../images/gallery5/09.jpg">
+          <img src="../images/gallery5/10.jpg">
         </div>
       </div>
     </div>
