--- a/html/gallery7.html
+++ b/html/gallery7.html
@@ -42,38 +42,38 @@
     <div id="gallery">
       <div class="row">
         <div class="column">
-          <img src="gallery7/000.jpg">
-          <img src="gallery7/001.jpg">
-          <img src="gallery7/002.jpg">
-          <img src="gallery7/003.jpg">
-          <img src="gallery7/004.jpg">
-          <img src="gallery7/005.jpg">
-          <img src="gallery7/006.jpg">
+          <img src="../images/gallery7/000.jpg">
+          <img src="../images/gallery7/01.jpg">
+          <img src="../images/gallery7/02.jpg">
+          <img src="../images/gallery7/03.jpg">
+          <img src="../images/gallery7/04.jpg">
+          <img src="../images/gallery7/05.jpg">
+          <img src="../images/gallery7/06.jpg">
         </div>
         <div class="column">
-          <img src="gallery7/007.jpg">
-          <img src="gallery7/008.jpg">
-          <img src="gallery7/009.jpg">
-          <img src="gallery7/0010.jpg">
-          <img src="gallery7/0011.jpg">
-          <img src="gallery7/0012.jpg">
+          <img src="../images/gallery7/07.jpg">
+          <img src="../images/gallery7/08.jpg">
+          <img src="../images/gallery7/09.jpg">
+          <img src="../images/gallery7/10.jpg">
+          <img src="../images/gallery7/11.jpg">
+          <img src="../images/gallery7/12.jpg">
         </div>
         <div class="column">
-          <img src="gallery7/0013.jpg">
-          <img src="gallery7/000.jpg">
-          <img src="gallery7/001.jpg">
-          <img src="gallery7/002.jpg">
-          <img src="gallery7/003.jpg">
-          <img src="gallery7/004.jpg">
-          <img src="gallery7/005.jpg">
+          <img src="../images/gallery7/13.jpg">
+          <img src="../images/gallery7/00.jpg">
+          <img src="../images/gallery7/01.jpg">
+          <img src="../images/gallery7/02.jpg">
+          <img src="../images/gallery7/03.jpg">
+          <img src="../images/gallery7/04.jpg">
+          <img src="../images/gallery7/05.jpg">
         </div>
         <div class="column">
-          <img src="gallery7/006.jpg">
-          <img src="gallery7/007.jpg">
-          <img src="gallery7/008.jpg">
-          <img src="gallery7/009.jpg">
-          <img src="gallery7/0010.jpg">
-          <img src="gallery7/0011.jpg">
+          <img src="../images/gallery7/06.jpg">
+          <img src="../images/gallery7/07.jpg">
+          <img src="../images/gallery7/08.jpg">
+          <img src="../images/gallery7/09.jpg">
+          <img src="../images/gallery7/10.jpg">
+          <img src="../images/gallery7/11.jpg">
         </div>
       </div>
     </div>
