--- a/html/gallery1.html
+++ b/html/gallery1.html
@@ -39,7 +39,7 @@
       </div>
     
     <div id="gallery">
-      <div><img src="..images/gallery1/01.jpg"/><a href="#lightbox-1">512</a></div>
+      <div><img src="/01.jpg"/><a href="#lightbox-1">512</a></div>
       <div><img src="..images/gallery1/02.jpg"/><a href="#lightbox-2">513</a></div>
       <div><img src="..images/gallery1/03.jpg"/><a href="#lightbox-3">514</a></div>
       <div><img src="..images/gallery1/04.jpg"/><a href="#lightbox-4">515</a></div>
@@ -59,92 +59,92 @@
       <div><img src="..images/gallery1/01.jpg"/><a href="#lightbox-18">529</a></div>
     </div>
     <div class="lightbox" id="lightbox-1">
-      <div class="content"><img src="..images/gallery1/01.jpg"/>
-        <div class="title">No. <b>512</b> from Picsum</div><a class="close" href="#gallery"></a>
+      <div class="content"><img src="gallery1/01.jpg"/>
+        <div class="title">No. <b>512</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-2">
       <div class="content"><img src="..images/gallery1/02.jpg"/>
-        <div class="title">No. <b>513</b> from Picsum</div><a class="close" href="#gallery"></a>
+        <div class="title">No. <b>513</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-3">
       <div class="content"><img src="..images/gallery1/03.jpg"/>
-        <div class="title">No. <b>514</b> from Picsum</div><a class="close" href="#gallery"></a>
+        <div class="title">No. <b>514</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-4">
       <div class="content"><img src="..images/gallery1/04.jpg"/>
-        <div class="title">No. <b>515</b> from Picsum</div><a class="close" href="#gallery"></a>
+        <div class="title">No. <b>515</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-5">
-      <div class="content"><img src="..images/gallery1/05.jpg"/>
-        <div class="title">No. <b>516</b> from Picsum</div><a class="close" href="#gallery"></a>
+      <div class="content"><img src=".images/gallery1/05.jpg"/>
+        <div class="title">No. <b>516</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-6">
-      <div class="content"><img src="..images/gallery1/06.jpg"/>
-        <div class="title">No. <b>517</b> from Picsum</div><a class="close" href="#gallery"></a>
+      <div class="content"><img src=".images/gallery1/06.jpg"/>
+        <div class="title">No. <b>517</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-7">
-      <div class="content"><img src="..images/gallery1/07.jpg"/>
-        <div class="title">No. <b>518</b> from Picsum</div><a class="close" href="#gallery"></a>
+      <div class="content"><img src=".images/gallery1/07.jpg"/>
+        <div class="title">No. <b>518</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-8">
       <div class="content"><img src="..images/gallery1/08.jpg"/>
-        <div class="title">No. <b>519</b> from Picsum</div><a class="close" href="#gallery"></a>
+        <div class="title">No. <b>519</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-9">
       <div class="content"><img src="..images/gallery1/09.jpg"/>
-        <div class="title">No. <b>520</b> from Picsum</div><a class="close" href="#gallery"></a>
+        <div class="title">No. <b>520</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-10">
       <div class="content"><img src="..images/gallery1/10.jpg"/>
-        <div class="title">No. <b>521</b> from Picsum</div><a class="close" href="#gallery"></a>
+        <div class="title">No. <b>521</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-11">
-      <div class="content"><img src="..images/gallery1/01.jpg"/>
+      <div class="content"><img src="gallery1/01.jpg"/>
         <div class="title">No. <b>522</b> from Picsum</div><a class="close" href="#gallery"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-12">
-      <div class="content"><img src="..images/gallery1/02.jpg"/>
+      <div class="content"><img src="gallery1/02.jpg"/>
         <div class="title">No. <b>523</b> from Picsum</div><a class="close" href="#gallery"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-13">
-      <div class="content"><img src="..images/gallery1/03.jpg"/>
+      <div class="content"><img src="gallery1/03.jpg"/>
         <div class="title">No. <b>524</b> from Picsum</div><a class="close" href="#gallery"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-14">
-      <div class="content"><img src="..images/gallery1/04.jpg"/>
+      <div class="content"><img src="gallery1/04.jpg"/>
         <div class="title">No. <b>525</b> from Picsum</div><a class="close" href="#gallery"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-15">
-      <div class="content"><img src="..images/gallery1/05.jpg"/>
+      <div class="content"><img src="gallery1/05.jpg"/>
         <div class="title">No. <b>526</b> from Picsum</div><a class="close" href="#gallery"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-16">
-      <div class="content"><img src="..images/gallery1/06.jpg"/>
+      <div class="content"><img src="gallery1/06.jpg"/>
         <div class="title">No. <b>527</b> from Picsum</div><a class="close" href="#gallery"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-17">
-      <div class="content"><img src="..images/gallery1/07.jpg"/>
+      <div class="content"><img src="gallery1/07.jpg"/>
         <div class="title">No. <b>528</b> from Picsum</div><a class="close" href="#gallery"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-18">
-      <div class="content"><img src="..images/gallery1/08.jpg"/>
+      <div class="content"><img src="gallery1/08.jpg"/>
         <div class="title">No. <b>529</b> from Picsum</div><a class="close" href="#gallery"></a>
       </div>
     </div>
