--- a/html/gallery3.html
+++ b/html/gallery3.html
@@ -42,38 +42,38 @@
     <div id="gallery">
       <div class="row">
         <div class="column">
-          <img src="gallery3/001.jpg">
-          <img src="gallery3/002.jpg">
-          <img src="gallery3/003.jpg">
-          <img src="gallery3/004.jpg">
-          <img src="gallery3/005.jpg">
-          <img src="gallery3/006.jpg">
-          <img src="gallery3/007.jpg">
+          <img src="../images/gallery3/01.jpg">
+          <img src="../images/gallery3/02.jpg">
+          <img src="../images/gallery3/03.jpg">
+          <img src="../images/gallery3/04.jpg">
+          <img src="../images/gallery3/05.jpg">
+          <img src="../images/gallery3/06.jpg">
+          <img src="../images/gallery3/07.jpg">
         </div>
         <div class="column">
-          <img src="gallery3/008.jpg">
-          <img src="gallery3/009.jpg">
-          <img src="gallery3/0010.jpg">
-          <img src="gallery3/0011.jpg">
-          <img src="gallery3/0012.jpg">
-          <img src="gallery3/0013.jpg">
+          <img src="../images/gallery3/08.jpg">
+          <img src="../images/gallery3/09.jpg">
+          <img src="../images/gallery3/10.jpg">
+          <img src="../images/gallery3/11.jpg">
+          <img src="../images/gallery3/12.jpg">
+          <img src="../images/gallery3/13.jpg">
         </div>
         <div class="column">
-          <img src="gallery3/0014.jpg">
-          <img src="gallery3/0015.jpg">
-          <img src="gallery3/0016.jpg">
-          <img src="gallery3/0017.jpg">
-          <img src="gallery3/0018.jpg">
-          <img src="gallery3/0019.jpg">
-          <img src="gallery3/0020.jpg">
+          <img src="../images/gallery3/14.jpg">
+          <img src="../images/gallery3/15.jpg">
+          <img src="../images/gallery3/16.jpg">
+          <img src="../images/gallery3/17.jpg">
+          <img src="../images/gallery3/18.jpg">
+          <img src="../images/gallery3/19.jpg">
+          <img src="../images/gallery3/20.jpg">
         </div>
         <div class="column">
-          <img src="gallery3/0021.jpg">
-          <img src="gallery3/0022.jpg">
-          <img src="gallery3/001.jpg">
-          <img src="gallery3/002.jpg">
-          <img src="gallery3/003.jpg">
-          <img src="gallery3/004.jpg">
+          <img src="../images/gallery3/21.jpg">
+          <img src="../images/gallery3/22.jpg">
+          <img src="../images/gallery3/01.jpg">
+          <img src="../images/gallery3/02.jpg">
+          <img src="../images/gallery3/03.jpg">
+          <img src="../images/gallery3/04.jpg">
         </div>
       </div>
     </div>
