--- a/html/gallery6.html
+++ b/html/gallery6.html
@@ -42,38 +42,38 @@
     <div id="gallery">
       <div class="row">
         <div class="column">
-          <img src="gallery6/001.jpg">
-          <img src="gallery6/002.jpg">
-          <img src="gallery6/003.jpg">
-          <img src="gallery6/004.jpg">
-          <img src="gallery6/006.jpg">
-          <img src="gallery6/006.jpg">
-          <img src="gallery6/007.jpg">
+          <img src="../images/gallery6/01.jpg">
+          <img src="../images/gallery6/02.jpg">
+          <img src="../images/gallery6/03.jpg">
+          <img src="../images/gallery6/04.jpg">
+          <img src="../images/gallery6/06.jpg">
+          <img src="../images/gallery6/06.jpg">
+          <img src="../images/gallery6/07.jpg">
         </div>
         <div class="column">
-          <img src="gallery6/008.jpg">
-          <img src="gallery6/009.jpg">
-          <img src="gallery6/0010.jpg">
-          <img src="gallery6/0011.jpg">
-          <img src="gallery6/0012.jpg">
-          <img src="gallery6/0013.jpg">
+          <img src="../images/gallery6/08.jpg">
+          <img src="../images/gallery6/09.jpg">
+          <img src="../images/gallery6/10.jpg">
+          <img src="../images/gallery6/11.jpg">
+          <img src="../images/gallery6/12.jpg">
+          <img src="../images/gallery6/13.jpg">
         </div>
         <div class="column">
-          <img src="gallery6/0014.jpg">
-          <img src="gallery6/0016.jpg">
-          <img src="gallery6/0016.jpg">
-          <img src="gallery6/0017.jpg">
-          <img src="gallery6/0018.jpg">
-          <img src="gallery6/001.jpg">
-          <img src="gallery6/002.jpg">
+          <img src="../images/gallery6/14.jpg">
+          <img src="../images/gallery6/15.jpg">
+          <img src="../images/gallery6/16.jpg">
+          <img src="../images/gallery6/17.jpg">
+          <img src="../images/gallery6/18.jpg">
+          <img src="../images/gallery6/01.jpg">
+          <img src="../images/gallery6/02.jpg">
         </div>
         <div class="column">
-          <img src="gallery6/003.jpg">
-          <img src="gallery6/004.jpg">
-          <img src="gallery6/005.jpg">
-          <img src="gallery6/006.jpg">
-          <img src="gallery6/007.jpg">
-          <img src="gallery6/008.jpg">
+          <img src="../images/gallery6/03.jpg">
+          <img src="../images/gallery6/04.jpg">
+          <img src="../images/gallery6/05.jpg">
+          <img src="../images/gallery6/06.jpg">
+          <img src="../images/gallery6/07.jpg">
+          <img src="../images/gallery6/08.jpg">
         </div>
       </div>
     </div>
