--- a/html/gallery8.html
+++ b/html/gallery8.html
@@ -42,46 +42,46 @@
     <div id="gallery">
       <div class="row">
         <div class="column">
-          <img src="gallery8/001.jpg">
-          <img src="gallery8/000.jpg">
-          <img src="gallery8/002.jpg">
-          <img src="gallery8/003.jpg">
-          <img src="gallery8/004.jpg">
-          <img src="gallery8/005.jpg">
-          <img src="gallery8/006.jpg">
+          <img src="../images/gallery8/01.jpg">
+          <img src="../images/gallery8/21.jpg">
+          <img src="../images/gallery8/02.jpg">
+          <img src="../images/gallery8/03.jpg">
+          <img src="../images/gallery8/04.jpg">
+          <img src="../images/gallery8/05.jpg">
+          <img src="../images/gallery8/06.jpg">
         </div>
         <div class="column">
-          <img src="gallery8/007.jpg">
-          <img src="gallery8/008.jpg">
-          <img src="gallery8/009.jpg">
-          <img src="gallery8/0010.jpg">
-          <img src="gallery8/0011.jpg">
-          <img src="gallery8/0012.jpg">
+          <img src="../images/gallery8/07.jpg">
+          <img src="../images/gallery8/08.jpg">
+          <img src="../images/gallery8/09.jpg">
+          <img src="../images/gallery8/10.jpg">
+          <img src="../images/gallery8/11.jpg">
+          <img src="../images/gallery8/12.jpg">
         </div>
         <div class="column">
-          <img src="gallery8/0013.jpg">
-          <img src="gallery8/0014.jpg">
-          <img src="gallery8/0015.jpg">
-          <img src="gallery8/0016.jpg">
-          <img src="gallery8/0017.jpg">
-          <img src="gallery8/0018.jpg">
-          <img src="gallery8/0019.jpg">
+          <img src="../images/gallery8/13.jpg">
+          <img src="../images/gallery8/14.jpg">
+          <img src="../images/gallery8/15.jpg">
+          <img src="../images/gallery8/16.jpg">
+          <img src="../images/gallery8/17.jpg">
+          <img src="../images/gallery8/18.jpg">
+          <img src="../images/gallery8/19.jpg">
         </div>
         <div class="column">
-          <img src="gallery8/0020.jpg">
-          <img src="gallery8/0021.jpg">
-          <img src="gallery8/0022.jpg">
-          <img src="gallery8/0023.jpg">
-          <img src="gallery8/0024.jpg">
-          <img src="gallery8/0025.jpg">
+          <img src="../images/gallery8/20.jpg">
+          <img src="../images/gallery8/26.jpg">
+          <img src="../images/gallery8/22.jpg">
+          <img src="../images/gallery8/23.jpg">
+          <img src="../images/gallery8/24.jpg">
+          <img src="../images/gallery8/25.jpg">
         </div>
         <div class="column">
-          <img src="gallery8/0026.jpg">
-          <img src="gallery8/0027.jpg">
-          <img src="gallery8/0028.jpg">
-          <img src="gallery8/0029.jpg">
-          <img src="gallery8/0030.jpg">
-          <img src="gallery8/0031.jpg">
+          <img src="../images/gallery8/26.jpg">
+          <img src="../images/gallery8/27.jpg">
+          <img src="../images/gallery8/28.jpg">
+          <img src="../images/gallery8/29.jpg">
+          <img src="../images/gallery8/30.jpg">
+          <img src="../images/gallery8/31.jpg">
         </div>
       </div>
     </div>
