reorganize and create new page

--- a/html/contact.html
+++ b/html/contact.html
@@ -13,11 +13,23 @@
     <nav>
       <div>
         <div class="navbar">
-            <a href="file:///Users/julie/Code/0-WebSitePhoto/index.html" title="ImionnSiad"><img class="title" src="logo.png"></a>
-          <ul>
-            <li><a href="file:///Users/julie/Code/0-WebSitePhoto/index.html">Home</a></li>
+          <a
+            href="./index.html"
+            title="ImionnSiad"
+            ><img class="title" src="../images/assets/logo.png"
+          /></a>
+          <ul class="navbar-top">
+            <li>
+              <a href="./index.html"
+                >Home</a
+              >
+            </li>
             <li><a href="#">Galleries</a></li>
-            <li><a href="#">About</a></li>
+            <li>
+              <a href="./about.html"
+                >About</a
+              >
+            </li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Mentions légales</a></li>
           </ul>
