--- a/html/gallery5.html
+++ b/html/gallery5.html
@@ -14,14 +14,10 @@
     <div class="bigmenu">
       <p>EVENTS</p>
       <ul class="menu">
-        <li><a href="file:///Users/julie/Code/0-WebSitePhoto/index.html">Home</a></li>
-        <li><a href="file:///Users/julie/Code/0-WebSitePhoto/about.html">About</a></li>
-        <li><a href="#">Church</a></li>
-        <li><a href="#">Store</a></li>
-        <li><a href="#">Shop</a></li>
-        <li><a href="#">legal</a></li>
-        <li><a href="#">contact</a></li>
-        <li><a href="#">More</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Mentions légales</a></li>
       </ul>
 
     </div>
