--- a/html/gallery1.html
+++ b/html/gallery1.html
@@ -16,12 +16,8 @@
       <ul class="menu">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
-        <li><a href="#">Church</a></li>
-        <li><a href="#">Store</a></li>
-        <li><a href="#">Shop</a></li>
-        <li><a href="#">legal</a></li>
-        <li><a href="#">contact</a></li>
-        <li><a href="#">More</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Mentions légales</a></li>
       </ul>
 
     </div>
@@ -79,17 +75,17 @@
       </div>
     </div>
     <div class="lightbox" id="lightbox-5">
-      <div class="content"><img src=".images/gallery1/05.jpg"/>
+      <div class="content"><img src="..images/gallery1/05.jpg"/>
         <div class="title">No. <b>516</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-6">
-      <div class="content"><img src=".images/gallery1/06.jpg"/>
+      <div class="content"><img src="..images/gallery1/06.jpg"/>
         <div class="title">No. <b>517</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-7">
-      <div class="content"><img src=".images/gallery1/07.jpg"/>
+      <div class="content"><img src="..images/gallery1/07.jpg"/>
         <div class="title">No. <b>518</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
       </div>
     </div>
