Css logo - finish

--- a/html/Homepage.html
+++ b/html/Homepage.html
@@ -11,13 +11,27 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap"
       rel="stylesheet"
     />
-    <link href="../css/index.css" media="all" rel="stylesheet" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="../css/index.css"
+      media="all"
+      rel="stylesheet"
+      type="text/css"
+    />
   </head>
   <body>
-    <div><img class="logo" src="../images/assets/logo.png">
+    <div class="containerlogo">
+      <img class="logo" src="../images/assets/logo.png" />
       <p class="text">IMIONN SIAD</p>
-      <img class="homepage" src="../images/assets/homepage.jpg">
     </div>
-    
+
+    <img class="homepage" src="../images/assets/homepage.jpg" />
   </body>
 </html>
