update links page

--- a/html/Homepage.html
+++ b/html/Homepage.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div class="containerlogo">
-      <img class="logo" src="../images/assets/logo.png" />
+      <a href="../html/index.html"><img class="logo" src="../images/assets/logo.png"/></a>
       <p class="text">IMIONN SIAD</p>
     </div>
 
