--- a/html/contact.html
+++ b/html/contact.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet"> 
-    <link href="contact.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="../css/contact.css" media="all" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <nav>
@@ -24,13 +24,13 @@
                 >Home</a
               >
             </li>
-            <li><a href="#">Galleries</a></li>
+            <li><a href="./categories.html">Galleries</a></li>
             <li>
               <a href="./about.html"
                 >About</a
               >
             </li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./contact.html">Contact</a></li>
             <li><a href="#">Mentions légales</a></li>
           </ul>
         </div>
@@ -53,7 +53,7 @@
     <div class="all">
       
       <div class="form">
-        <img class="sidepic" src="03.jpg"/> 
+        <img class="sidepic" src="../images/assets/homepage.jpg"/> 
         <div class="container">
           
           <form action="/action_page.php">
