--- a/html/index.html
+++ b/html/index.html
@@ -30,13 +30,13 @@
                 >Home</a
               >
             </li>
-            <li><a href="#">Galleries</a></li>
+            <li><a href="./categories.html">Galleries</a></li>
             <li>
               <a href="about.html"
                 >About</a
               >
             </li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./contact.html">Contact</a></li>
             <li><a href="#">Mentions légales</a></li>
           </ul>
         </div>
