update links and change css

--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap"
       rel="stylesheet"
     />
-    <link href="../css/index.css" media="all" rel="stylesheet" type="text/css" />
+    <link
+      href="../css/index.css"
+      media="all"
+      rel="stylesheet"
+      type="text/css"
+    />
   </head>
   <body>
     <!-- Fixed navbar -->
@@ -19,22 +24,16 @@
     <nav>
       <div>
         <div class="navbar">
-          <a
-            href="index.html"
-            title="ImionnSiad"
+          <a href="index.html" title="ImionnSiad"
             ><img class="title" src="../images/assets/logo.png"
           /></a>
           <ul class="navbar-top">
             <li>
-              <a href="index.html"
-                >Home</a
-              >
+              <a href="index.html">Home</a>
             </li>
             <li><a href="./categories.html">Galleries</a></li>
             <li>
-              <a href="about.html"
-                >About</a
-              >
+              <a href="about.html">About</a>
             </li>
             <li><a href="./contact.html">Contact</a></li>
             <li><a href="#">Mentions légales</a></li>
@@ -46,36 +45,12 @@
     <section>
       <div class="navbar-2">
         <div class="sidenav">
-          <a
-            class="textmenu"
-            href="./gallery1.html"
-            >Nature</a
-          >
-          <a
-            class="textmenu"
-            href="./gallery2.html"
-            >Medieval</a
-          >
-          <a
-            class="textmenu"
-            href="./gallery3.html"
-            >Wedding</a
-          >
-          <a
-            class="textmenu"
-            href="./gallery4.html"
-            >Portraits</a
-          >
-          <a
-            class="textmenu"
-            href="./gallery5.html"
-            >Events</a
-          >
-          <a
-            class="textmenu"
-            href="./gallery6.html"
-            >Shows</a
-          >
+          <a class="textmenu" href="./gallery1.html">Nature</a>
+          <a class="textmenu" href="./gallery2.html">Medieval</a>
+          <a class="textmenu" href="./gallery3.html">Wedding</a>
+          <a class="textmenu" href="./gallery4.html">Portraits</a>
+          <a class="textmenu" href="./gallery5.html">Events</a>
+          <a class="textmenu" href="./gallery6.html">Shows</a>
           <a class="textmenu" href="#">Concerts</a>
           <a class="textmenu" href="#">Personal</a>
         </div>
