--- a/html/categories.html
+++ b/html/categories.html
@@ -35,10 +35,14 @@
             ><img class="title" src="../images/assets/logo.png"
           /></a>
           <ul class="navbar-top">
-            <li><a href="./index.html">Home</a></li>
+            <li>
+              <a href="index.html">Home</a>
+            </li>
             <li><a href="./categories.html">Galleries</a></li>
-            <li> <a href="./about.html">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li>
+              <a href="about.html">About</a>
+            </li>
+            <li><a href="./contact.html">Contact</a></li>
             <li><a href="#">Mentions légales</a></li>
           </ul>
         </div>
