--- a/html/gallery1.html
+++ b/html/gallery1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <title>Gallery 1</title>
+    <title>NATURE</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">  
@@ -12,11 +12,16 @@
   <body>
 
     <div class="bigmenu">
-      <p>LE GRAND MENU</p>
+      <p>NATURE</p>
       <ul class="menu">
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./about.html">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+        <li><a href="./categories.html">Galleries</a></li>
+        <li>
+          <a href="about.html">About</a>
+        </li>
+        <li><a href="./contact.html">Contact</a></li>
         <li><a href="#">Mentions légales</a></li>
       </ul>
 
@@ -35,73 +40,73 @@
       </div>
     
     <div id="gallery">
-      <div><img src="/01.jpg"/><a href="#lightbox-1">512</a></div>
-      <div><img src="..images/gallery1/02.jpg"/><a href="#lightbox-2">513</a></div>
-      <div><img src="..images/gallery1/03.jpg"/><a href="#lightbox-3">514</a></div>
-      <div><img src="..images/gallery1/04.jpg"/><a href="#lightbox-4">515</a></div>
-      <div><img src="..images/gallery1/05.jpg"/><a href="#lightbox-5">516</a></div>
-      <div><img src="..images/gallery1/06.jpg"/><a href="#lightbox-6">517</a></div>
-      <div><img src="..images/gallery1/07.jpg"/><a href="#lightbox-7">518</a></div>
-      <div><img src="..images/gallery1/08.jpg"/><a href="#lightbox-8">519</a></div>
-      <div><img src="..images/gallery1/09.jpg"/><a href="#lightbox-9">520</a></div>
-      <div><img src="..images/gallery1/10.jpg"/><a href="#lightbox-10">521</a></div>
-      <div><img src="..images/gallery1/11.jpg"/><a href="#lightbox-11">522</a></div>
-      <div><img src="..images/gallery1/12.jpg"/><a href="#lightbox-12">523</a></div>
-      <div><img src="..images/gallery1/13.jpg"/><a href="#lightbox-13">524</a></div>
-      <div><img src="..images/gallery1/14.jpg"/><a href="#lightbox-14">525</a></div>
-      <div><img src="..images/gallery1/15.jpg"/><a href="#lightbox-15">526</a></div>
-      <div><img src="..images/gallery1/16.jpg"/><a href="#lightbox-16">527</a></div>
-      <div><img src="..images/gallery1/17.jpg"/><a href="#lightbox-17">528</a></div>
-      <div><img src="..images/gallery1/01.jpg"/><a href="#lightbox-18">529</a></div>
+      <div><img src="../images/gallery1/01.jpg"/><a href="#lightbox-1">512</a></div>
+      <div><img src="../images/gallery1/02.jpg"/><a href="#lightbox-2">513</a></div>
+      <div><img src="../images/gallery1/03.jpg"/><a href="#lightbox-3">514</a></div>
+      <div><img src="../images/gallery1/04.jpg"/><a href="#lightbox-4">515</a></div>
+      <div><img src="../images/gallery1/05.jpg"/><a href="#lightbox-5">516</a></div>
+      <div><img src="../images/gallery1/06.jpg"/><a href="#lightbox-6">517</a></div>
+      <div><img src="../images/gallery1/07.jpg"/><a href="#lightbox-7">518</a></div>
+      <div><img src="../images/gallery1/08.jpg"/><a href="#lightbox-8">519</a></div>
+      <div><img src="../images/gallery1/09.jpg"/><a href="#lightbox-9">520</a></div>
+      <div><img src="../images/gallery1/10.jpg"/><a href="#lightbox-10">521</a></div>
+      <div><img src="../images/gallery1/11.jpg"/><a href="#lightbox-11">522</a></div>
+      <div><img src="../images/gallery1/12.jpg"/><a href="#lightbox-12">523</a></div>
+      <div><img src="../images/gallery1/13.jpg"/><a href="#lightbox-13">524</a></div>
+      <div><img src="../images/gallery1/14.jpg"/><a href="#lightbox-14">525</a></div>
+      <div><img src="../images/gallery1/15.jpg"/><a href="#lightbox-15">526</a></div>
+      <div><img src="../images/gallery1/16.jpg"/><a href="#lightbox-16">527</a></div>
+      <div><img src="../images/gallery1/17.jpg"/><a href="#lightbox-17">528</a></div>
+      <div><img src="../images/gallery1/01.jpg"/><a href="#lightbox-18">529</a></div>
     </div>
     <div class="lightbox" id="lightbox-1">
-      <div class="content"><img src="gallery1/01.jpg"/>
-        <div class="title">No. <b>512</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
+      <div class="content"><img src="../images/gallery1/01.jpg"/>
+        <div class="title">No. <b>512</b> from Picsum</div><a class="close" href="../images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-2">
-      <div class="content"><img src="..images/gallery1/02.jpg"/>
-        <div class="title">No. <b>513</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
+      <div class="content"><img src="../images/gallery1/02.jpg"/>
+        <div class="title">No. <b>513</b> from Picsum</div><a class="close" href="../images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-3">
-      <div class="content"><img src="..images/gallery1/03.jpg"/>
-        <div class="title">No. <b>514</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
+      <div class="content"><img src="../images/gallery1/03.jpg"/>
+        <div class="title">No. <b>514</b> from Picsum</div><a class="close" href="../images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-4">
-      <div class="content"><img src="..images/gallery1/04.jpg"/>
-        <div class="title">No. <b>515</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
+      <div class="content"><img src="../images/gallery1/04.jpg"/>
+        <div class="title">No. <b>515</b> from Picsum</div><a class="close" href="../images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-5">
-      <div class="content"><img src="..images/gallery1/05.jpg"/>
-        <div class="title">No. <b>516</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
+      <div class="content"><img src="../images/gallery1/05.jpg"/>
+        <div class="title">No. <b>516</b> from Picsum</div><a class="close" href="../images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-6">
-      <div class="content"><img src="..images/gallery1/06.jpg"/>
-        <div class="title">No. <b>517</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
+      <div class="content"><img src="../images/gallery1/06.jpg"/>
+        <div class="title">No. <b>517</b> from Picsum</div><a class="close" href="../images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-7">
-      <div class="content"><img src="..images/gallery1/07.jpg"/>
-        <div class="title">No. <b>518</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
+      <div class="content"><img src="../images/gallery1/07.jpg"/>
+        <div class="title">No. <b>518</b> from Picsum</div><a class="close" href="../images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-8">
-      <div class="content"><img src="..images/gallery1/08.jpg"/>
-        <div class="title">No. <b>519</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
+      <div class="content"><img src="../images/gallery1/08.jpg"/>
+        <div class="title">No. <b>519</b> from Picsum</div><a class="close" href="../images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-9">
-      <div class="content"><img src="..images/gallery1/09.jpg"/>
-        <div class="title">No. <b>520</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
+      <div class="content"><img src="../images/gallery1/09.jpg"/>
+        <div class="title">No. <b>520</b> from Picsum</div><a class="close" href="../images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-10">
-      <div class="content"><img src="..images/gallery1/10.jpg"/>
-        <div class="title">No. <b>521</b> from Picsum</div><a class="close" href="..images/gallery1"></a>
+      <div class="content"><img src="../images/gallery1/10.jpg"/>
+        <div class="title">No. <b>521</b> from Picsum</div><a class="close" href="../images/gallery1"></a>
       </div>
     </div>
     <div class="lightbox" id="lightbox-11">
