--- a/html/gallery7.html
+++ b/html/gallery7.html
@@ -14,9 +14,14 @@
     <div class="bigmenu">
       <p>CONCERTS</p>
       <ul class="menu">
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./about.html">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+        <li><a href="./categories.html">Galleries</a></li>
+        <li>
+          <a href="about.html">About</a>
+        </li>
+        <li><a href="./contact.html">Contact</a></li>
         <li><a href="#">Mentions légales</a></li>
       </ul>
 
